--- a/frontend/medtrack-frontend/index.html
+++ b/frontend/medtrack-frontend/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <!-- FullCalendar 5 CSS via CDN -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@5.11.3/main.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@5.11.3/main.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@5.11.3/main.min.css" rel="stylesheet" /> -->
+
   </head>
   <body>
     <div id="root"></div>
